ms/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tcc.info
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authorization-deployment
                port:
                  number: 5000
          - pathType: Prefix
            path: /users
            backend:
              service:
                name: user-crud-deployment
                port:
                  number: 3000
          - pathType: Prefix
            path: /cars
            backend:
              service:
                name: car-crud-deployment
                port:
                  number: 5001
